--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "easy-peasy": "^6.1.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
     "typescript": "^4.9.5",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
