--- a/MyApi/MyApi.csproj
+++ b/MyApi/MyApi.csproj
@@ -5,7 +5,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+  <PropertyGroup>
+  <!-- Resolve absolute path to ../frontend -->
+    <SpaDist>$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)/../FrontEnd/build/'))</SpaDist>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
@@ -25,16 +28,11 @@
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
   </ItemGroup>
+  <Target Name="CopySpaFiles" AfterTargets="ComputeFilesToPublish">
   <ItemGroup>
-  <ClientBuildFiles Include="..\FrontEnd\build\**" />
+    <SpaFiles Include="$(SpaDist)**" />
   </ItemGroup>
-  <Target Name="BuildClient" BeforeTargets="PrepareForPublish">
-  <!-- Change Client to your actual client folder name -->
-  <Exec WorkingDirectory="..\FrontEnd" Command="npm install" />
-  <Exec WorkingDirectory="..\FrontEnd" Command="npm run build" />
-  <!-- Copy React build into wwwroot -->
-  <RemoveDir Directories="wwwroot" />
-  <Copy SourceFiles="@(ClientBuildFiles)" DestinationFolder="wwwroot\%(RecursiveDir)" />
+  <Copy SourceFiles="@(SpaFiles)" DestinationFolder="$(PublishDir)wwwroot\%(RecursiveDir)" />
 </Target>
 
 
