--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -33,8 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm ci --prefix MyApi && npm run build --prefix MyApi"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
