--- a/MyApi/MyApi.csproj
+++ b/MyApi/MyApi.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
   <PropertyGroup>
   <!-- Resolve absolute path to ../frontend -->
-    <SpaDist>$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)/../FrontEnd/build/'))</SpaDist>
+    <SpaRoot>$([System.IO.Path]::GetFullPath('$(MSBuildProjectDirectory)/../FrontEnd/'))</SpaRoot>
+    <SpaDist>$(SpaRoot)build/</SpaDist>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
@@ -28,10 +29,14 @@
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
   </ItemGroup>
-  <Target Name="CopySpaFiles" AfterTargets="ComputeFilesToPublish">
-  <ItemGroup>
-    <SpaFiles Include="$(SpaDist)**" />
-  </ItemGroup>
+   <Target Name="SpaRestore" BeforeTargets="Build">
+  <Exec WorkingDirectory="$(SpaRoot)" Command="npm ci" />
+</Target>
+<Target Name="SpaBuild" BeforeTargets="PrepareForPublish">
+  <Exec WorkingDirectory="$(SpaRoot)" Command="npm run build" />
+</Target>
+<Target Name="CopySpaFiles" AfterTargets="ComputeFilesToPublish">
+  <ItemGroup><SpaFiles Include="$(SpaDist)**" /></ItemGroup>
   <Copy SourceFiles="@(SpaFiles)" DestinationFolder="$(PublishDir)wwwroot\%(RecursiveDir)" />
 </Target>
 
