--- a/MyApi/Dockerfile
+++ b/MyApi/Dockerfile
@@ -1,5 +1,5 @@
 # build
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
 COPY MyApi/MyApi.csproj MyApi/
@@ -7,9 +7,9 @@ COPY MyApi/MyApi.csproj MyApi/
 RUN dotnet restore MyApi/MyApi.csproj
 
 COPY . .
-RUN dotnet publish ./MyApi/MyApi.csproj -c Release -o /app
+RUN dotnet publish MyApi/MyApi.csproj -c Release -o /out
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
 COPY --from=build /out .
 EXPOSE 8080
