--- a/MyApi/Dockerfile
+++ b/MyApi/Dockerfile
@@ -1,29 +1,26 @@
-# ---- build ----
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
-# Node for npm ci in ../FrontEnd
+# Node for frontend build (if your csproj runs npm)
 RUN apt-get update && apt-get install -y curl gnupg \
   && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
   && apt-get install -y nodejs
 
-# Copy NuGet config + project first (from MyApi/)
-COPY NuGet.config ./
-COPY MyApi.csproj ./
+# Copy NuGet config + project using repo-root context paths
+COPY MyApi/NuGet.config ./
+COPY MyApi/MyApi.csproj MyApi/
 
-# Restore with clean config (avoid Windows fallback folders)
-RUN dotnet restore ./MyApi.csproj --configfile NuGet.config \
+# Restore
+RUN dotnet restore MyApi/MyApi.csproj --configfile NuGet.config \
     -p:RestoreAdditionalProjectFallbackFolders= -p:RestoreFallbackFolders=
 
-# Bring in the whole repo (so ../FrontEnd is available)
-COPY .. .
+# Bring in the rest of the repo (API + FrontEnd)
+COPY . .
 
-# Build & publish (Frontend built by csproj target)
-#   Add -p:SkipClientBuild=true here if you want to skip React build in Docker
-RUN dotnet build ./MyApi.csproj -c Release --no-restore
-RUN dotnet publish ./MyApi.csproj -c Release -o /out --no-restore
+# Build/Publish (your csproj can run npm in ../FrontEnd)
+RUN dotnet build MyApi/MyApi.csproj -c Release --no-restore
+RUN dotnet publish MyApi/MyApi.csproj -c Release -o /out --no-restore
 
-# ---- runtime ----
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
 COPY --from=build /out .
