--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,12 @@
 services:
   - type: web
-    name: myapp
+    name: myapi
     runtime: docker
-    plan: free
+    dockerfilePath: MyApi/Dockerfile
+    dockerContext: .
+    plan: basic-256mb
+    rootDir: .
+    healthCheckPath: /
     autoDeploy: true
     envVars:
       - key: ASPNETCORE_ENVIRONMENT
