--- a/MyApi/Properties/launchSettings.json
+++ b/MyApi/Properties/launchSettings.json
@@ -7,7 +7,9 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5220",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Cors__Origins": "https://localhost:3000",
+        "AWS_ACCESS_KEY_ID": ""
       }
     }
   }
