--- a/MyApi/Properties/launchSettings.json
+++ b/MyApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "Cors__Origins": "https://localhost:3000",
-        "AWS_ACCESS_KEY_ID": ""
+        "AWS_ACCESS_KEY_ID": "3"
       }
     }
   }
