remove aspostrophe on env

--- a/FrontEnd/.env.production
+++ b/FrontEnd/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL="https://redditforum.onrender.com"
+REACT_APP_API_BASE_URL=https://redditforum.onrender.com
 REACT_APP_ASSET_BASE_URL=https://myapi-uploads.s3.us-east-2.amazonaws.com
